--- a/index.html
+++ b/index.html
@@ -3,14 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Knowledge Platform - Empowering AI Innovation</title>
+    <title>KAI.IO - Intelligent AI Knowledge Platform</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <style>
         :root {
             --primary-color: #2563eb;
             --secondary-color: #3b82f6;
             --accent-color: #60a5fa;
+            --logo-color: #2563eb;
+            --text-color: #1f2937;
+        }
+
+        .brand-logo {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        .brand-logo img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        .brand-logo h1 {
+            color: var(--text-color);
+            margin-top: 1rem;
+        }
+
+        .feature-card {
+            background: white;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+            transition: all 0.3s ease;
+        }
+
+        .feature-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+        }
+
+        .cta-button {
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            color: white;
+            padding: 14px 32px;
+            border-radius: 30px;
+            text-decoration: none;
+            transition: all 0.3s ease;
+            font-weight: 600;
+        }
+
+        .cta-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            opacity: 0.95;
+        }
+
+        .pricing-card {
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+        }
+
+        .pricing-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+        }
+
+        .testimonial {
+            background: white;
+            border-radius: 12px;
+            padding: 2rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+        }
+
+        .testimonial p {
+            font-size: 1.1rem;
+            color: var(--text-color);
         }
 
         body {
@@ -109,7 +176,10 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h1 class="display-4 mb-4">AI Knowledge Platform</h1>
+            <div class="brand-logo">
+    <img src="{{ url_for('static', filename='logo.svg') }}" alt="KAI.IO Logo" width="200" height="200" class="mb-4">
+    <h1 class="display-4 mb-4">KAI.IO</h1>
+</div>
             <p class="lead mb-5">Transform Your AI Development with Intelligent Knowledge Management</p>
             <a href="#features" class="cta-button">Get Started</a>
         </div>
@@ -324,7 +394,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h5>About Us</h5>
-                    <p>AI Knowledge Platform is dedicated to revolutionizing AI development through intelligent knowledge management and custom AI solutions.</p>
+                    <p>KAI.IO is dedicated to revolutionizing AI development through intelligent knowledge management and custom AI solutions.</p>
                 </div>
                 <div class="col-md-4">
                     <h5>Quick Links</h5>
@@ -337,7 +407,7 @@
                 </div>
                 <div class="col-md-4">
                     <h5>Contact Us</h5>
-                    <p>Email: contact@ai-knowledge-platform.com<br>
+                    <p>Email: contact@kai.io<br>
                     Phone: (555) 123-4567<br>
                     Address: 123 AI Street, Silicon Valley, CA</p>
                 </div>
